src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Application_Id__c</fullName>
        <label>Application Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Priority_Key__c</fullName>
        <label>Application Priority Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status_Key__c</fullName>
        <description>Internal id for application status field</description>
        <label>Application Status Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <description>The detailed stage of project and it&apos;s DSMC workflow which affects the overall project status. A change in application status for a project can affect the project status.</description>
        <label>Application Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Incentive__c</fullName>
        <label>Approved Incentive</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Kw_Installed__c</fullName>
        <label>Approved Kw Installed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Kwh_Savings__c</fullName>
        <label>Approved Kwh Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Therm_Savings__c</fullName>
        <label>Approved Therm Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Water_Savings__c</fullName>
        <label>Approved Water Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_in_Last_6_Months__c</fullName>
        <formula>TODAY() - Completion_Date__c &lt; 183</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed in Last 6 Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Savings_estimate__c</fullName>
        <label>Incentive Savings (estimate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measures__c</fullName>
        <label>Measure(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Need Values</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Text__c</fullName>
        <description>This field holds the Project name that comes from DSMC in a nightly batch and is a string value.</description>
        <label>Project Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partners__c</fullName>
        <label>Partners</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramLookup</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectX_Id__c</fullName>
        <label>ProjectX Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <description>External Id for Project</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for Project</inlineHelpText>
        <label>Project Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <description>Overall status of project representing the project workflow state. User cannot directly change the project status for a project. The project list options are fixed and same for every client and instance.</description>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PROJECT_STATUS_CANCELLED</fullName>
                    <label>Cancelled</label>
                </value>
                <value>
                    <fullName>PROJECT_STATUS_COMPLETED</fullName>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>PROJECT_STATUS_INPROGRESS</fullName>
                    <label>InProgress</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Summary__c</fullName>
        <label>Project Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Qualified_Rebate_Amount__c</fullName>
        <label>Qualified Rebate Amount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral</label>
        <referenceTo>Referral__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Estimate Provided</fullName>
                </value>
                <value>
                    <fullName>Work Started</fullName>
                </value>
                <value>
                    <fullName>Installed / Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Ally</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Trade Ally)</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Ally_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trade Ally Referral</label>
        <referenceTo>Trade_Ally_Referral__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kWh_Savings_estimate__c</fullName>
        <label>kWh Savings (estimate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TA_Account__c</columns>
        <columns>kWh_Savings_estimate__c</columns>
        <columns>Completion_Date__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>